# Hivewire-Agent-Swarm-Harness

./: .gitignore  AGENTS.md  DESIGN.md  GEMINI.md  README.md  TODOS.md  install_hivewire_benchmark_scheduler.sh  open_hivewire_console.command  open_hivewire_console.sh  setup_hivewire_benchmark_scheduler.sh  uninstall_hivewire_benchmark_scheduler.sh
.claude/commands/: goal.md
co-routing/: conftest.py  litellm_corouting.py  pools.yaml.example  pyproject.toml  server.py  ssrf_guard.py  vendors.yaml.example
co-routing/benchmark/: METHODOLOGY.md  README.md  dashboard.py  evidence.py  metrics.py  pricing.yaml.example  profiles.py  profiles.yaml.example  report.py  runner.py  scheduler.py  targets.yaml.example
co-routing/demo/: corouting_demo.py  demo.py
co-routing/docs/: vendor-integration.md
co-routing/tests/: test_benchmark.py  test_benchmark_evidence.py  test_benchmark_profiles.py  test_cost_dashboard.py  test_dev_launcher.py  test_litellm_corouting.py  test_report.py  test_server.py  test_ssrf_guard.py  test_vendor_adapter.py
docs/: file-naming-standards.md
docs/product/: benchmark-moat.md
docs/project-process/: todos.md
